[project]
name = "asgi-debugger"
version = "0.1.0"
description = "A simple middleware for logging requests and timings"
readme = "README.md"
authors = [
    { name = "Samuel Monson", email = "smonson@redhat.com" }
]
requires-python = ">=3.12"
dependencies = [
    "starlette>=0.50.0",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
